crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__touch_of_the_void_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 3
        },
        "target": {
          "type": "Any"
        }
      },
      "cost": null,
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "AddTargetReplacement",
          "replacement": {
            "event": "Moved",
            "execute": {
              "kind": "Spell",
              "effect": {
                "type": "ChangeZone",
                "origin": "Battlefield",
                "destination": "Exile",
                "target": {
                  "type": "SelfRef"
                },
                "owner_library": false,
                "enter_transformed": false,
                "enter_tapped": false,
                "enters_attacking": false
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "mode": {
              "type": "Mandatory"
            },
            "valid_card": {
              "type": "SelfRef"
            },
            "description": null,
            "condition": null,
            "destination_zone": "Graveyard",
            "consume_on_apply": true,
            "expiry": {
              "type": "EndOfTurn"
            }
          },
          "target": {
            "type": "Any"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "~ deals 3 damage to any target. If a creature dealt damage this way would die this turn, exile it instead.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": [
    "Devoid"
  ]
}
